--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "megamail-marketing-website",
   "private": true,
-  "version": "1.0.2",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "deploy": "vite build"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^19.1.1",
